# minimcp-servers

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/minimcp_servers/core/: builder.py  logger.py
src/minimcp_servers/modules/: basic_math.py  datetime.py  math.py  random_generator.py  text.py
src/minimcp_servers/modules/math/: arithmetic.py  continuous.py  discrete.py  stats.py
src/minimcp_servers/servers/: arithmetic_math_utils.py  basic_math.py  continuous_math_utils.py  datetime_utils.py  discrete_math_utils.py  math.py  math_utils.py  random_generator.py  statistics_math_utils.py  text_utils.py
tests/: test_datetime.py  test_math_arithmetic.py  test_math_continuous.py  test_math_discrete.py  test_math_stats.py  test_random_generator.py  test_text.py
